component: 리스트 레이아웃 컴포넌트 생성

--- a/src/ListContainer.module.css
+++ b/src/ListContainer.module.css
@@ -9,6 +9,14 @@
     flex-direction: 'space-between';
 }
 
+.listFilter{
+    margin-top: 20px;
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
+    background: rgb(246,248,250);
+    padding: 16px;
+}
+
 .input{
     background: #f6f8fa;
     border-radius: 6px;
@@ -19,4 +27,13 @@
     box-shadow: none;
     border: 1px solid rgba(27, 
     31, 36, 0.15);
+}
+
+.filterLists{
+    display: flex;
+    align-items: center;
+}
+.filterLists > span {
+    padding:  0 16px;
+    line-height: 2;
 }
