--- a/src/ListContainer.module.css
+++ b/src/ListContainer.module.css
@@ -37,6 +37,12 @@
 .filterLists > span {
     padding:  0 16px;
     line-height: 2;
+    cursor: pointer;
+    color: #57606a;
+}
+
+.filterLists > span:hover {
+    color: #000000;
 }
 
 .selected{
