--- a/src/components/Tab.module.css
+++ b/src/components/Tab.module.css
@@ -4,6 +4,7 @@
     list-style: none; 
     padding: 0;
     margin: 0;
+    text-decoration-line: none;
 }
 .tab{
     display: flex;
@@ -12,10 +13,13 @@
     align-items: center;
     justify-content: center;
     padding-bottom: 15px;
-    margin-right: 10px;
 }
 
 .selected{
     border-bottom: #fa4549 2px solid;
     font-weight: bold;
+}
+
+.link{
+  text-decoration-line: none;
 }
